# DDR-MODEL

./: .gitignore  CMakeLists.txt  FREQ_RATIO_TEST_GUIDE.md  LPDDR5_AC_Timing_Checker_完整设计文档.md  README.md  SmartHybrid刷新管理器实现报告.md  rebuild_and_test.sh  run_all_corner_tests.py  run_all_freq_ratio_tests.sh  run_freq_ratio_test.sh  test_verification.sh  快速编译运行指南.md
.kiro/specs/lpddr5-ac-timing-checker/: design.md  requirements.md  tasks.md
CHIPort/: CMakeLists.txt
CHIPort/include/CHIPort/: CHILink.hh  CHIMonitor.h  CHIMonitor.hh  CHIPort.h  CHIPort.hh  CHITrafficGenerator.h  CHIUtilities.h  DBExtension.h  MemoryManager.h  MpamCbusyCal.hh  P2cFifo.hh  PortCommon.hh  PortMemoryManager.hh  PortStruct.h  PortUtilities.h  PrefetchBuffer.hh  RdDataInfo.hh  ResponseQueues.hh  RetryResourceManager.hh  WdataBufferArray.hh
CHIPort/src/: CHIMonitor.cpp  CHIPort.cpp  CHITrafficExample.cpp  CHITrafficGenerator.cpp  DBExtension.cpp  MemoryManager.cpp  MpamCbusyCal.cpp  P2cFifo.cpp  PortMemoryManager.cpp  PortStruct.cpp  PrefetchBuffer.cpp  ResponseQueues.cpp  RetryResourceManager.cpp  WdataBufferArray.cpp
Common/: CMakeLists.txt
Common/include/Common/: Common.hh  CommonDefine.hh  StatisticExtension.hh  UifExtension.hh  UifMaster.hh  UifSlave.hh  logger.hh
Common/include/Configure/: AddressDecoder.hh  Configure.hh  DDR5MemSpec.hh  DDR5MemSpec3ds.hh  LoadAddressMapConfig.hh  LoadConfigFromJson.hh  LoadConfigure.hh  LoadControllerConfig.hh  LoadMemSpec.hh  McConfig.hh
Common/src/Common/: StatisticExtension.cpp  logger.cpp
Common/src/Configure/: AddressDecoder.cpp  DDR5MemSpec.cpp  DDR5MemSpec3ds.cpp  McConfig.cpp
ConfigureFile/: 3ds_map2.json  3ds_map7.json  mrdimm_map1.json  mrdimm_map1_no_refresh.json  mrdimm_map5.json  mrdimm_map5_no_refresh.json  no3ds_map1.json  no3ds_map5.json
ConfigureFile/addressmapping/: am_ddr5_16Gbx8_3ds_2H_brc_map2.json  am_ddr5_16Gbx8_3ds_2H_brc_map7.json  am_ddr5_16Gbx8_brc_map1.json  am_ddr5_16Gbx8_brc_map5.json  am_ddr5_64Gbx8_3ds_4H_brc.json
ConfigureFile/mcconfig/: controller_config.json  mrdimm_controller_config.json  mrdimm_controller_config_no_refresh.json
ConfigureFile/memspec/: 16Gb_DDR5_6400_B_x8_3DS_2H.json  16Gb_DDR5_7200-6400_B_x8.json  16Gb_DDR5_7200-6400_B_x8_mrdimm.json  64Gb_DDR5_6400_B_x8_3DS_4H.json  64Gb_DDR5_6400_B_x8_3DS_8H.json  DDR5_Spec_Template.json
Controller/: CMakeLists.txt
Controller/include/Controller/: BankSlice.hh  BankSliceManager.hh  CamEntry.hh  CamFilter.hh  CamIF.hh  CmdSelect.hh  InputProcess.hh  MemoryController.hh  MemoryDevice.hh  ModeSwitch.hh  MrdimmCmdSelect.hh  MrdimmController.hh  MrdimmModeSwitch.hh  PhyDelayModel.hh  RdCam.hh  RefreshMachine.hh  RefreshMachineManager.hh  Scheduler.hh  SdramConstraint.hh  WrCam.hh
Controller/include/Controller/common/: ChildParentExtension.hh  CmdExtension.hh  Command.hh  ControllerCommon.hh  DfiExtension.hh  MemoryManager.hh
Controller/include/Controller/script/: calculate.py  run_3ds.sh  run_3ds_result.sh  run_cont.sh  run_cont_result.sh  run_no3ds.sh  run_no3ds_result.sh  run_single.sh
Controller/script/: aggregate_reports.py  log_visualizer.py  parse_statisic.py  run_3ds.sh  run_3ds_result.sh  run_cont.sh  run_cont_result.sh  run_mrdimm.sh  run_mrdimm_no_ref.sh  run_no3ds.sh  run_no3ds_result.sh  run_result.sh  run_single.sh
Controller/src/: BankSlice.cpp  BankSliceManager.cpp  CamEntry.cpp  CamFilter.cpp  CmdSelect.cpp  InputProcess.cpp  MemoryController.cpp  MemoryDevice.cpp  ModeSwitch.cpp  MrdimmCmdSelect.cpp  MrdimmController.cpp  MrdimmModeSwitch.cpp  PhyDelayModel.cpp  RdCam.cpp  Scheduler.cpp  SdramConstraint.cpp  WrCam.cpp
Controller/src/common/: ChildParentExtension.cpp  Command.cpp  ControllerCommon.cpp
Controller/test/: mc_test.cpp
DMU/: CMakeLists.txt  d4_ac_timing_test.cpp  lp5_ac_timing_test.cpp  lp5_ac_timing_test.h  lp5_freq_ratio_test.cpp  lp5_freq_ratio_test.h  lp5_memspec_test.cpp  lp5_memspec_test.h  main.cc
DMU/include/DMU/: DramManagerUnit.hh  DramMannageUnit.h  d4_ac_timing_test.h
DMU/src/: DramManagerUnit.cpp  DramMannageUnit.cpp  test_example.cpp  test_refresh_extreme.cpp
lib/DRAMsys/: CMakeLists.txt
lib/DRAMsys/configs/: ddr4-fifo.json  ddr4-noref.json  ddr4-per2bank.json  ddr4-rbc.json  lpddr4-example.json  lpddr5-1to2-example.json  lpddr5-1to4-example.json  lpddr5-example.json
lib/DRAMsys/configs/addressmapping/: am_ddr4_rbc.json  am_lpddr5_16Gbx16_brc.json
lib/DRAMsys/configs/mcconfig/: smart_hybrid.json
lib/DRAMsys/configs/memspec/: JEDEC_LPDDR5-6400.json  JEDEC_LPDDR5-6400_16bit_8BG.json  JEDEC_LPDDR5-6400_1to2.json  JEDEC_LPDDR5-6400_1to4.json
lib/DRAMsys/configs/simconfig/: example.json
lib/DRAMsys/src/configuration/DRAMSys/config/: McConfig.h
lib/DRAMsys/src/libdramsys/: CMakeLists.txt
lib/DRAMsys/src/libdramsys/DRAMSys/configuration/: Configuration.cpp  Configuration.h
lib/DRAMsys/src/libdramsys/DRAMSys/configuration/memspec/: MemSpec.h  MemSpecLPDDR5.cpp  MemSpecLPDDR5.h
lib/DRAMsys/src/libdramsys/DRAMSys/controller/: Controller.cpp
lib/DRAMsys/src/libdramsys/DRAMSys/controller/checker/: CheckerLPDDR5.cpp  CheckerLPDDR5.h  CheckerWideIO2.h
lib/DRAMsys/src/libdramsys/DRAMSys/controller/refresh/: RefreshManagerAllBank.cpp  RefreshManagerPerBank.cpp  RefreshManagerSmartHybrid.cpp  RefreshManagerSmartHybrid.h
lib/DRAMsys/src/libdramsys/DRAMSys/simulation/dram/: Dram.cpp  Dram.h  DramLPDDR5.cpp  DramLPDDR5.h
lib/amba_tlm/: CMakeLists.txt
lib/amba_tlm/include/ARM/TLM/: arm_axi4.h
lib/tlm_learning/: Tutorial 1.md  Tutorial 2.md  Tutorial 3.md  tlm2_getting_started_1.cpp  tlm2_getting_started_2.cpp  tlm2_getting_started_3.cpp
模拟器优化方案/: HJ控制器刷新策略模拟器设计优化signoff报告.md  HJ控制器刷新策略模拟器设计优化文档.md  HJ控制器刷新策略模拟器设计优化方案.md  HJ控制器刷新策略模拟器设计优化设计Signoff报告.md  Missions.md
模拟器优化方案/Precharge策略优化/: PREAB_PRESB现有实现提取.md
模拟器优化方案/刷新策略优化/: HJ控制器刷新策略模拟器设计优化设计Signoff报告.md
模拟器优化方案/刷新策略优化/现有HJ控制器刷新文档/assets/: 1_inst_ref_top架构图.pngZone.Identifier
模拟器优化方案/现有HJ控制器刷新文档/: HJ控制器刷新功能分析文档.md
模拟器优化方案/现有HJ控制器刷新文档/assets/: 1_inst_ref_top架构图.pngZone.Identifier
模拟器优化方案/现有HJ控制器文档/: HJ控制器刷新功能分析文档.md
